samples/_failures_safe/1761335928_4f46d1_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4b4d2f56.c: In function ‘main’:
./samples/SAFE/__tmp_4b4d2f56.c:161:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  161 |     const char* input
      |     ^~~~~
./samples/SAFE/__tmp_4b4d2f56.c:161:5: error: expected declaration or statement at end of input
